5.2.4
-----
1. Fix setting colour from cover when colour setting changed in settings.
2. Re-add showing of now-playing menu on context/long-press of image.
3. Dim disabled items in server-side, and extra player, settings.
4. If combobox is disabled then don't show its menu.

5.2.3
-----
 1. In mobile layout, if queue is cleared then switch to browse view.
 2. Take top/bottom padding into account in more places.
 3. Add "npAutoClose=false" URL query parameter to stop now-playing
    auto-close when no tracks.
 4. Fix updating some coloured SVG icons when using colour from cover and cover
    changes.
 5. Resize more metrics when mobile keyboard shown.
 6. Allow long words to be broken up for word-wrap in now-playing.
 7. Fix desktop now-playing bar text clipping if width less than 550px.
 8. Click on now-playing overlay to close.
 9. Fix broken 'Show band' translation.
10. Use custom progress bar class.
11. If using full-screen/view for now-playing background then when showing
    now-playing use text colour for volume slider, song progress, and mobile
    bottom navigation bar.

5.2.2
-----
1. When offer to un-pin start-mix from home screen via 'Random Mix' dialog
   then use displayed text of home screen item.
2. For LMS9.0 when click on queue/now-playing 'Random Mix' icon show start-mix
   dialog.
3. Fix mix types - these don't end in 's', i.e. 'track' not 'tracks'
4. If no name entered into 'Random Mix' dialog then save should just update
   current settings.
5. Only allow 'Play now' action for random mixes.
6. Handle renaming of random mixes.
7. If using whole view for now-playing background and using wide desktop
   layout, then place cover vertically in the middle.
8. Fix MAI height when using bottom padding and replacing navigation bar.

5.2.1
-----
1. Fix permissions of Hungarian translations file.
2. Rename Hungarian translation files from "hu-hu" to "hu"
3. Try to ensure random mixes have "safe" names by replacing any question mark,